--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     </h3>
   </div>
 
+  <div id="js-playerWin" class="container">
+    <p id="js-winner"></p>
+  </div>
+  
   <div id="js-newGameElement" class="container">
     <div class="row text-center">
       <button  id="js-newGameButton" class="btn btn-default">
