--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
           Player Score
         </span>
       </div>
-      <div class="col-xs-2"></div>
+      <div class="col-xs-2">
+        <span id="js-draw">
+          
+        </span>
+      </div>
       <div class="col-xs-5 text-center">
         <span id="js-computerResult">
           Computer Score
