hiding winner div

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           Player Score
         </span>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-2 text-center">
         <span id="js-draw">
           
         </span>
